hphp/test/slow/class_constant/abstract_const11.php.expectf
Fatal error: D cannot inherit the constant FOO from K, because it was previously inherited from J in %stest/slow/class_constant/abstract_const11.php on line 15
